hphp/test/slow/traits/diamond_use/diamond_use3.php.expectf
Fatal error: Method 'foo' declared in multiple traits (T1, T2, T3, T4) in %s/diamond_use3.php on line 22
